Fix generated Azure projects in starter [skip ci] (#1917)
* Remove restriction on Java 8 and 11, and Retry annotation

* Use static NAME for Azure function

* Add static for AzureHttpFunction name

* Remove clean from Gradle instructions

* Fix generated tests [skip-ci]

* Kick off the actions

* Fix other Azure tests that I missed

* Fix AzureFunction spec

* Fix checkstyle errors

* Add Serde-jackson for tests

--- a/starter-web-netty/build.gradle
+++ b/starter-web-netty/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     testCompileOnly "io.micronaut:micronaut-inject-groovy"
     testImplementation "io.micronaut.test:micronaut-test-spock"
     testImplementation "io.micronaut:micronaut-http-client"
+    testRuntimeOnly("io.micronaut.serde:micronaut-serde-jackson")
 }
 
 application {
