--- a/starter-gcp-function/build.gradle
+++ b/starter-gcp-function/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     testCompileOnly "io.micronaut:micronaut-inject-groovy"
     testImplementation("com.google.cloud.functions:functions-framework-api")
     testImplementation "io.micronaut.test:micronaut-test-spock"
+    testRuntimeOnly("io.micronaut.serde:micronaut-serde-jackson")
     invoker 'com.google.cloud.functions.invoker:java-function-invoker:1.3.0'
 
     annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
