attempt to pass buildArgs for graal --statci and musl

--- a/starter-web-netty/build.gradle
+++ b/starter-web-netty/build.gradle
@@ -49,6 +49,7 @@ graalvmNative {
             sharedLibrary = false
             imageName = 'micronaut-starter'
             mainClass = 'io.micronaut.starter.netty.Application'
+            buildArgs.add('--static --libc=musl')
         }
     }
 }
