Revert "attempt to setup musl"
This reverts commit a1967dceb404c03b2e06b6e09872eb4654ac6982.

--- a/starter-web-netty/build.gradle
+++ b/starter-web-netty/build.gradle
@@ -49,10 +49,7 @@ graalvmNative {
             sharedLibrary = false
             imageName = 'micronaut-starter'
             mainClass = 'io.micronaut.starter.netty.Application'
-            if (project.hasProperty("musl")) {
-                logger.lifecycle("Using musl libc")
-                buildArgs("--libc=musl", "--static")
-            }
+            buildArgs.add('--static --libc=musl')
         }
     }
 }
