--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -47,7 +47,7 @@ log4j = "2.19.0"
 log4j-slf4j = "2.17.2"
 micronaut-aot = "2.0.0-M1"
 micronaut-build-plugins = "6.5.3"
-micronaut-gradle-plugin = "4.0.0-M8"
+micronaut-gradle-plugin = "4.0.0"
 mockk = "1.9.3"
 protobuf-gradle-plugin = "0.9.2"
 rewrite-gradle-plugin = "5.12.0"
@@ -62,8 +62,8 @@ ktor = "2.2.4"
 jakarta-validation-api = "3.0.2"
 spring-boot-gradle-plugin = "3.1.1"
 spring-dependency-management-plugin = "1.1.0"
-micronaut-starter-aws-cdk = "4.0.0-M4"
-micronaut-security-aot = "4.0.0-M8"
+micronaut-starter-aws-cdk = "4.0.0-RC1"
+micronaut-security-aot = "4.0.0"
 spring-boot-starter-parent="3.1.1"
 [libraries]
 spring-boot-starter-parent = { module = "org.springframework.boot:spring-boot-starter-parent", version.ref = "spring-boot-starter-parent" }
