--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=4.0.1-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=4.0.0
+micronautVersion=4.0.1-SNAPSHOT
 micronautCoreVersion=4.0.0
 rockerVersion=1.3.0
 groovyVersion=4.0.13
