--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 projectVersion=4.0.0-SNAPSHOT
 micronautBuildVersion=1.1.5
 micronautVersion=4.0.0-SNAPSHOT
-micronautCoreVersion=4.0.0-M2
+micronautCoreVersion=4.0.0
 rockerVersion=1.3.0
-groovyVersion=4.0.11
+groovyVersion=4.0.12
 spockVersion=2.3-groovy-4.0
 title=Micronaut Launch
 micronautDocsVersion=2.0.0
