--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -45,9 +45,9 @@ kotlin = "1.8.20"
 ksp = "1.8.20-1.0.10"
 log4j = "2.19.0"
 log4j-slf4j = "2.17.2"
-micronaut-aot = "2.0.0-M1"
-micronaut-build-plugins = "6.4.2"
-micronaut-gradle-plugin = "4.0.0-M2"
+micronaut-aot = "2.0.0"
+micronaut-build-plugins = "6.5.3"
+micronaut-gradle-plugin = "4.0.0"
 mockk = "1.9.3"
 protobuf-gradle-plugin = "0.9.2"
 rewrite-gradle-plugin = "5.12.0"
