--- a/settings.gradle
+++ b/settings.gradle
@@ -5,7 +5,7 @@ pluginManagement {
     }
     plugins {
         id "com.microsoft.azure.azurefunctions" version "1.12.1"
-        id 'io.micronaut.application' version '4.0.0-M2'
+        id 'io.micronaut.application' version '4.0.0'
     }
 }
 
@@ -17,7 +17,7 @@ buildscript {
 }
 
 plugins {
-    id 'io.micronaut.build.shared.settings' version '6.4.2'
+    id 'io.micronaut.build.shared.settings' version '6.5.3'
 }
 
 rootProject.name = 'micronaut-starter'
