build: Micronaut AOT 2.0.1

--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -45,7 +45,7 @@ kotlin = "1.8.22"
 ksp = "1.8.22-1.0.11"
 log4j = "2.19.0"
 log4j-slf4j = "2.17.2"
-micronaut-aot = "2.0.0-M1"
+micronaut-aot = "2.0.1"
 micronaut-build-plugins = "6.5.3"
 micronaut-gradle-plugin = "4.0.1"
 mockk = "1.9.3"
