--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 projectVersion=4.0.2-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=4.0.1
-micronautCoreVersion=4.0.1
+micronautVersion=4.0.2-SNAPSHOT
+micronautCoreVersion=4.0.2-SNAPSHOT
 rockerVersion=1.3.0
 groovyVersion=4.0.13
 spockVersion=2.3-groovy-4.0
