--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 projectVersion=3.9.5-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=3.9.5-SNAPSHOT
+micronautVersion=3.9.5
 rockerVersion=1.3.0
 groovyVersion=3.0.17
 spockVersion=2.3-groovy-3.0
