--- a/settings.gradle
+++ b/settings.gradle
@@ -41,6 +41,7 @@ include 'test-cloud'
 include 'test-features'
 include 'test-utils'
 include 'test-cli'
+include 'test-suite-graal'
 
 project(':starter-cli').name = "micronaut-cli"
 
