--- a/test-suite-graal/build.gradle
+++ b/test-suite-graal/build.gradle
@@ -9,8 +9,8 @@ repositories {
 }
 
 dependencies {
-    implementation project(":starter-api")
-    implementation project(":starter-web-netty")
+    implementation(project(":starter-api"))
+    implementation(project(":starter-web-netty"))
     testImplementation("io.micronaut.test:micronaut-test-junit5")
 }
 
