--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -461,6 +461,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_TOKEN }}
+          ref: ${{ github.event.release.target_commitish }}
       - uses: gradle/wrapper-validation-action@v1
       - name: Set up JDK
         uses: actions/setup-java@v3.11.0
