--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 projectVersion=4.0.4-SNAPSHOT
 micronautBuildVersion=1.1.5
-micronautVersion=4.0.4-SNAPSHOT
-micronautCoreVersion=4.0.4-SNAPSHOT
+micronautVersion=4.0.4
+micronautCoreVersion=4.0.4
 rockerVersion=1.3.0
 groovyVersion=4.0.13
 spockVersion=2.3-groovy-4.0
