Add documentation about what a Community Feature is.
closes #2026

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -25,3 +25,4 @@ starterImpls:
   starterCloudFunction: Google Cloud Function
   starterLambda: AWS Lambda
   starterAzure: Microsoft Azure
+communityFeature: Community Features
