--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.13
 micronautVersion=4.0.6-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.0.6-SNAPSHOT
+micronautCoreVersion=4.0.6
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.0.6-SNAPSHOT
