--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.14
 micronautVersion=4.1.1-SNAPSHOT
 kafkaVersion=NA
-micronautCoreVersion=4.1.4-SNAPSHOT
+micronautCoreVersion=4.1.5
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.1.1-SNAPSHOT
