--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.14
-micronautVersion=4.1.1-SNAPSHOT
+micronautVersion=4.1.1
 kafkaVersion=NA
 micronautCoreVersion=4.1.5
 projectDesc=Generates Micronaut applications
