--- a/gradle.properties
+++ b/gradle.properties
@@ -12,9 +12,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.13
-micronautVersion=4.0.7-SNAPSHOT
+micronautVersion=4.0.7
 kafkaVersion=NA
-micronautCoreVersion=4.0.7-SNAPSHOT
+micronautCoreVersion=4.0.6
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.0.7-SNAPSHOT
