--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ micronautCoreVersion=4.1.6-SNAPSHOT
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.1.2-SNAPSHOT
+projectGroup=io.micronaut.starter
