build: force usage of micronautCoreVersion

--- a/test-suite-graal/build.gradle
+++ b/test-suite-graal/build.gradle
@@ -22,6 +22,13 @@ configurations.all {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force "io.micronaut:micronaut-core-bom:$micronautCoreVersion"
+        force "io.micronaut:micronaut-inject-groovy:$micronautCoreVersion"
+    }
+}
+
 graalvmNative {
     binaries {
         all {
