build: force usage of micronautCoreVersion

--- a/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.internal.starter.base-module.gradle
@@ -24,6 +24,7 @@ configurations.all {
                 details.useVersion(spockVersion)
             }
         }
+        force "io.micronaut:micronaut-inject-groovy:$micronautCoreVersion"
     }
 }
 
