Try to fix native compilation for 3.8.x branch

--- a/starter-cli/build.gradle
+++ b/starter-cli/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'io.micronaut.internal.build.starter-cli-module'
+    id 'io.micronaut.application'
 }
 
 ext {
@@ -45,6 +46,23 @@ dependencies {
     testImplementation 'org.codehaus.groovy:groovy-xml'
 
     implementation("org.jline:jline:3.19.0")
+}
+
+graalvmNative {
+    toolchainDetection = false
+
+    binaries {
+        main {
+            // Main options
+            sharedLibrary = false
+            imageName = "mn"
+            if (project.hasProperty("musl")) {
+                logger.lifecycle("Using musl libc")
+                buildArgs("--libc=musl", "--static")
+            }
+            mainClass = "io.micronaut.starter.cli.MicronautStarter"
+        }
+    }
 }
 
 application {
