--- a/.github/workflows/mn-macos-snapshot.yml
+++ b/.github/workflows/mn-macos-snapshot.yml
@@ -11,36 +11,36 @@ jobs:
     name: Builds OS X Native CLI
     runs-on: macos-latest
     steps:
-      - name: Checkout the repository
+      - name: "⬇ Checkout the repository"
         uses: actions/checkout@v3
-      - name: Setup GraalVM CE
+        with:
+          fetch-depth: 0
+      - name: "☕️ Setup GraalVM CE"
         uses: graalvm/setup-graalvm@v1
         with:
-          version: '21.3.0'
-          java-version: '11'
+          version: '22.3.2'
+          java-version: '17'
           components: 'native-image'
           github-token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build the JAR
+      - name: "📸 Build the Native Image"
+        run: ./gradlew micronaut-cli:nativeCompile --no-daemon
         env:
           GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.GRADLE_ENTERPRISE_ACCESS_KEY }}
           GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.GRADLE_ENTERPRISE_CACHE_USERNAME }}
           GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.GRADLE_ENTERPRISE_CACHE_PASSWORD }}
-        run: ./gradlew micronaut-cli:shadowJar --no-daemon
-      - name: Build Native Image
-        run: native-image --no-fallback --allow-incomplete-classpath -cp starter-cli/build/libs/micronaut-cli-*-all.jar
-      - name: Verify Build
-        run: ./mn --version
-      - name: Verify Create App
-        run: ./mn create-app test
-      - name: Package Build
+      - name: "✅ Verify Build"
+        run: ./starter-cli/build/native/nativeCompile/mn --version
+      - name: "✅ Verify Create App"
+        run: ./starter-cli/build/native/nativeCompile/mn create-app test
+      - name: "👷‍♀️Package Build"
         env:
           VERSION: ${{ github.event.release.tag_name }}
         run: |
           mkdir -p mn-darwin-amd64-snapshot/bin
-          mv ./mn mn-darwin-amd64-snapshot/bin
+          mv ./starter-cli/build/native/nativeCompile/mn mn-darwin-amd64-snapshot/bin
           cp ./LICENSE mn-darwin-amd64-snapshot/
           zip -r mn-darwin-amd64-snapshot.zip ./mn-darwin-amd64-snapshot -x '*.DS_Store*' -x '__MAC_OSX'
-      - name: Upload Snapshot
+      - name: "🆙 Upload Snapshot"
         if: success() && github.event_name == 'push' && github.ref == 'refs/heads/3.9.x'
         uses: actions/upload-artifact@v3
         with:
