--- a/gradle/templates.versions.toml
+++ b/gradle/templates.versions.toml
@@ -58,6 +58,7 @@ rocker-gradle-plugin = "3.0.4"
 rocker-maven-plugin = "1.3.0"
 scram-client = "2.1"
 slf4j = "1.7.36"
+slf4j-simple-logger = "2.0.0"
 zeebe-micronaut-client = "1.14.0"
 ktor = "2.2.4"
 jakarta-validation-api = "3.0.2"
@@ -132,6 +133,7 @@ rewrite-micronaut = { module = "org.openrewrite.recipe:rewrite-micronaut", versi
 rocker-gradle-plugin = { module = "nu.studer:gradle-rocker-plugin", version.ref = "rocker-gradle-plugin" }
 rocker-maven-plugin = { module = "com.fizzed:rocker-maven-plugin", version.ref = "rocker-maven-plugin" }
 scram-client = { module = "com.ongres.scram:client", version.ref = "scram-client" }
+slf4j-simple-logger = { module = "io.goodforgod:slf4j-simple-logger", version.ref = "slf4j-simple-logger" }
 zeebe-micronaut-client = { module = "info.novatec:micronaut-zeebe-client-feature", version.ref = "zeebe-micronaut-client" }
 
 [plugins]
