--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.15
-micronautVersion=4.1.3-SNAPSHOT
+micronautVersion=4.1.3
 kafkaVersion=NA
 micronautCoreVersion=4.1.7-SNAPSHOT
 projectDesc=Generates Micronaut applications
