--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ grailsVersion=3.3.8
 groovyVersion=4.0.15
 micronautVersion=4.1.3
 kafkaVersion=NA
-micronautCoreVersion=4.1.7-SNAPSHOT
+micronautCoreVersion=4.1.8
 projectDesc=Generates Micronaut applications
 githubBranch=master
 projectVersion=4.1.3-SNAPSHOT
