build: Check via gradle tasks versions are not snapshots (#2098)
* build: Check via gradle tasks versions are not snapshots

This PR adds Gradle Tasks to ensure a release can be triggered with non snapshot versions of `projectVersion`, `micronautCoreVersion` and micronautVersion`.

These tasks help to have a release with integrity.

* moved after pre-release step

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,12 @@ jobs:
           MICRONAUT_BUILD_EMAIL: ${{ secrets.MICRONAUT_BUILD_EMAIL }}
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+      - name: projectVersion is not a snapshot
+        run: ./gradlew projectVersionNotSnapshot
+      - name: Micronaut Core is not a snapshot
+        run: ./gradlew micronautCoreNotSnapshot
+      - name: Micronaut Platform is not a snapshot
+        run: ./gradlew micronautPlatformNotSnapshot
       - name: Build All
         run: ./gradlew micronaut-cli:assemble
         env:
