--- a/starter-web-netty/src/main/resources/application.yml
+++ b/starter-web-netty/src/main/resources/application.yml
@@ -4,6 +4,12 @@ micronaut:
       swagger:
         paths: classpath:META-INF/swagger
         mapping: /swagger/**
+      swagger-ui:
+        paths: classpath:META-INF/swagger/views/swagger-ui
+        mapping: /swagger-ui/**
+      rapidoc:
+        paths: classpath:META-INF/swagger/views/rapidoc
+        mapping: /rapidoc/**
   server:
     cors:
       enabled: true
