Add tests and fix for Jetty

--- a/starter-web-servlet/src/main/resources/application.properties
+++ b/starter-web-servlet/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 micronaut.router.static-resources.swagger.paths=classpath:META-INF/swagger
 micronaut.router.static-resources.swagger.mapping=/swagger/**
-
+micronaut.router.static-resources.swagger-ui.paths=classpath:META-INF/swagger/views/swagger-ui
+micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
+micronaut.router.static-resources.rapidoc.paths=classpath:META-INF/swagger/views/rapidoc
+micronaut.router.static-resources.rapidoc.mapping=/rapidoc/**
