--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.3.0
 grailsVersion=3.3.8
 groovyVersion=4.0.15
-micronautVersion=4.1.4-SNAPSHOT
+micronautVersion=4.1.3
 kafkaVersion=NA
-micronautCoreVersion=4.1.9-SNAPSHOT
+micronautCoreVersion=4.1.8
 projectDesc=Generates Micronaut applications
 githubBranch=master
-projectVersion=4.1.4-SNAPSHOT
+projectVersion=4.1.3
