Prepare starter to create dockerBuildCrac
Supersedes #1805 targetting 4.2.x.

Stops using alias to work around Gradle bug.

--- a/starter-aws-lambda/build.gradle
+++ b/starter-aws-lambda/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "io.micronaut.internal.starter.convention"
-    alias(templateLibs.plugins.micronaut.application)
+    id "io.micronaut.application"
 }
 
 micronaut {
