use serde not jackson-databind

--- a/starter-api/build.gradle
+++ b/starter-api/build.gradle
@@ -16,8 +16,10 @@ dependencies {
     api("io.micronaut.validation:micronaut-validation")
     annotationProcessor("io.micronaut.validation:micronaut-validation-processor")
 
+    annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+    api("io.micronaut.serde:micronaut-serde-jackson")
+
     testCompileOnly("io.micronaut:micronaut-inject-groovy")
-    testImplementation("io.micronaut:micronaut-jackson-databind")
     testImplementation("io.micronaut:micronaut-http-server-netty")
     testImplementation("io.micronaut:micronaut-http-client")
     testImplementation("io.micronaut.test:micronaut-test-spock")
