--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     api "io.github.java-diff-utils:java-diff-utils:4.10"
     api "org.eclipse.jgit:org.eclipse.jgit:6.5.0.202303070854-r"
     api("org.yaml:snakeyaml")
-    api 'io.micronaut.serde:micronaut-serde-api'
     implementation("com.typesafe:config:1.4.2")
+    annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+    api("io.micronaut.serde:micronaut-serde-jackson")
     implementation("io.micronaut.testresources:micronaut-test-resources-build-tools")
     implementation 'org.apache.commons:commons-compress:1.25.0'
     testImplementation("org.apache.groovy:groovy-xml")
