Fix dependencies block in gradle scripts.

--- a/starter-core/build.gradle
+++ b/starter-core/build.gradle
@@ -16,19 +16,23 @@ sourceSets {
 }
 
 dependencies {
-    api platform("io.micronaut.platform:micronaut-platform:$micronautVersion")
-    api "com.fizzed:rocker-runtime:$rockerVersion"
-    api "io.micronaut:micronaut-inject"
-    api("com.fasterxml.jackson.core:jackson-annotations")
-    api "io.micronaut:micronaut-http-client"
-    api "io.github.java-diff-utils:java-diff-utils:4.12"
-    api "org.eclipse.jgit:org.eclipse.jgit:6.8.0.202311291450-r"
-    api("org.yaml:snakeyaml")
-    implementation("com.typesafe:config:1.4.3")
+
     annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
+
+    api(platform("io.micronaut.platform:micronaut-platform:$micronautVersion"))
+    api("com.fizzed:rocker-runtime:$rockerVersion")
+    api("io.micronaut:micronaut-inject")
+    api("com.fasterxml.jackson.core:jackson-annotations")
+    api("io.micronaut:micronaut-http-client")
+    api("io.github.java-diff-utils:java-diff-utils:4.12")
+    api("org.eclipse.jgit:org.eclipse.jgit:6.8.0.202311291450-r")
+    api("org.yaml:snakeyaml")
     api("io.micronaut.serde:micronaut-serde-jackson")
+
+    implementation("com.typesafe:config:1.4.3")
     implementation("io.micronaut.testresources:micronaut-test-resources-build-tools")
-    implementation 'org.apache.commons:commons-compress:1.25.0'
+    implementation("org.apache.commons:commons-compress:1.25.0")
+
     testImplementation("org.apache.groovy:groovy-xml")
 }
 
