--- a/test-core/build.gradle
+++ b/test-core/build.gradle
@@ -3,8 +3,8 @@ plugins {
 }
 
 dependencies {
-    testImplementation project(":test-utils")
-    testImplementation project(":starter-core")
-    testImplementation project(":micronaut-cli")
+    testImplementation(project(":test-utils"))
+    testImplementation(project(":starter-core"))
+    testImplementation(project(":micronaut-cli"))
     testImplementation("ch.qos.logback:logback-classic")
 }
