--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,7 @@ on:
     types: [published]
 jobs:
   build:
-    name: Release artifacts to Maven Central & SDKMAN, and publish documentation
+    name: Release artifacts to Maven Central & SDKMAN!, and publish documentation
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -261,7 +261,7 @@ jobs:
           release_version=${GITHUB_REF:11}
           sed -i "s/^projectVersion.*$/projectVersion\=${release_version}/" gradle.properties
           echo "release_version=${release_version}" >> $GITHUB_OUTPUT
-      - name: SDKMAN release
+      - name: SDKMAN! release
         env:
           GVM_SDKVENDOR_KEY: ${{ secrets.GVM_SDKVENDOR_KEY }}
           GVM_SDKVENDOR_TOKEN: ${{ secrets.GVM_SDKVENDOR_TOKEN }}
