--- a/starter-web-servlet/src/main/resources/application.properties
+++ b/starter-web-servlet/src/main/resources/application.properties
@@ -4,3 +4,7 @@ micronaut.router.static-resources.swagger-ui.paths=classpath:META-INF/swagger/vi
 micronaut.router.static-resources.swagger-ui.mapping=/swagger-ui/**
 micronaut.router.static-resources.rapidoc.paths=classpath:META-INF/swagger/views/rapidoc
 micronaut.router.static-resources.rapidoc.mapping=/rapidoc/**
+micronaut.router.static-resources.redoc.paths=classpath:META-INF/swagger/views/redoc
+micronaut.router.static-resources.redoc.mapping=/redoc/**
+micronaut.router.static-resources.openapi-explorer.paths=classpath:META-INF/swagger/views/openapi-explorer
+micronaut.router.static-resources.openapi-explorer.mapping=/openapi-explorer/**
