micronautVersion=4.3.7 [ci skip]

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ githubSlug=micronaut-projects/micronaut-starter
 rockerVersion=1.4.0
 grailsVersion=3.3.8
 groovyVersion=4.0.20
-micronautVersion=4.3.7-SNAPSHOT
+micronautVersion=4.3.7
 kafkaVersion=NA
 micronautCoreVersion=4.3.12
 projectDesc=Generates Micronaut applications
