Add missing `replaceLogbackXml` in aot build configuration for gradle and maven.
closes #2418

--- a/starter-core/src/test/resources/expected-aot-jar.properties
+++ b/starter-core/src/test/resources/expected-aot-jar.properties
@@ -11,6 +11,9 @@ precompute.environment.properties.enabled=true
 # Converts YAML configuration files to Java configuration
 yaml.to.java.config.enabled=true
 
+# Replaces logback.xml with a pure Java configuration
+logback.xml.to.java.enabled=true
+
 # Scans for service types ahead-of-time, avoiding classpath scanning at startup
 serviceloading.jit.enabled=true
 
