--- a/starter-core/src/test/resources/expected-aot-native-image.properties
+++ b/starter-core/src/test/resources/expected-aot-native-image.properties
@@ -11,6 +11,9 @@ precompute.environment.properties.enabled=true
 # Converts YAML configuration files to Java configuration
 yaml.to.java.config.enabled=false
 
+# Replaces logback.xml with a pure Java configuration
+logback.xml.to.java.enabled=false
+
 # Generates GraalVM configuration files required to load the AOT optimizations
 graalvm.config.enabled=true
 
