--- a/starter-core/src/test/resources/expected-aot-native-image.properties
+++ b/starter-core/src/test/resources/expected-aot-native-image.properties
@@ -12,7 +12,7 @@ precompute.environment.properties.enabled=true
 yaml.to.java.config.enabled=false
 
 # Replaces logback.xml with a pure Java configuration
-logback.xml.to.java.enabled=false
+logback.xml.to.java.enabled=true
 
 # Generates GraalVM configuration files required to load the AOT optimizations
 graalvm.config.enabled=true
