Add missing `replaceLogbackXml` in aot build configuration for gradle and maven. (#2424)
closes #2418

* Update starter-core/src/test/resources/expected-aot-native-image.properties
* fix merge issue
* `logback.xml.to.java.enabled` aot optimization always true

--- a/starter-core/src/test/resources/expected-aot-jar.properties
+++ b/starter-core/src/test/resources/expected-aot-jar.properties
@@ -8,6 +8,9 @@ cached.environment.enabled=true
 # Precomputes Micronaut configuration property keys from the current environment variables
 precompute.environment.properties.enabled=true
 
+# Replaces logback.xml with a pure Java configuration
+logback.xml.to.java.enabled=true
+
 # Converts YAML configuration files to Java configuration
 yaml.to.java.config.enabled=true
 
